--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,3 @@
-requests
+# Cette ligne indique que le programme a besoin de la bibliothèque requests en version 2.32.3
+# pour fonctionner
+requests==2.32.3
