--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,1 +1,44 @@
+name: Construire le conteneur et le publier sur le registre GitHub Packages
 
+on:
+  push:
+    branches:
+      - main  # L'action se déclenche pour les push sur la branche main
+
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
+
+    # Permissions pour accéder à GitHub Packages
+    permissions:
+      contents: read
+      packages: write
+      actions: read
+      id-token: write
+
+    steps:
+      # 1. Récupère le code source du dépôt
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # 2. Login au registre GitHub Packages
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # 3. Construire le conteneur et le publier sur le registre GitHub Packages
+      - name: Construire le conteneur et le publier sur le registre GitHub Packages
+        uses: docker/build-push-action@v5
+        with:
+          context: . # Utilise le répertoire courant pour construire l'image
+          push: true
+          tags: ghcr.io/Abouamp/ue19-lab-05
+
+      # 4. Scanner l'image Docker pour les vulnerabilites
+      - name: Scanner l'image Docker pour les vulnerabilites
+        uses: aquasecurity/trivy-action@master 
+        with:
+          image-ref: ghcr.io/Abouamp/ue19-lab-05
