--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,10 +35,10 @@ jobs:
         with:
           context: . # Utilise le répertoire courant pour construire l'image
           push: true
-          tags: ghcr.io/Abouamp/ue19-lab-05
+          tags: ghcr.io/abouamp/ue19-lab-05
 
       # 4. Scanner l'image Docker pour les vulnerabilites
       - name: Scanner l'image Docker pour les vulnerabilites
         uses: aquasecurity/trivy-action@master 
         with:
-          image-ref: ghcr.io/Abouamp/ue19-lab-05
+          image-ref: ghcr.io/abouamp/ue19-lab-05
